tests - Copy/14.genkubesec_privileged_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-name
spec:
  containers:
  - name: some-container
    image: some-image
    command:
    - some-command
    securityContext:
      privileged: true
