tests - Copy/3.efs_plugin_misconfig.yaml
apiVersion: v1
kind: Pod
metadata:
  name: efs-plugin
spec:
  containers:
    - name: efs-plugin
      image: amazon/aws-efs-csi-driver:v1.5.1
      imagePullPolicy: IfNotPresent
      securityContext:
        # WARNING: running a container in privileged mode disables
        # many of Kubernetes’ isolation features and should be avoided.
        privileged: true
